fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -288,14 +288,15 @@ textarea {
   left: 0;
   right: 0;
   z-index: -1;
+  background-color: #f5f5f5;
 }
 
 .hero-breaker {
-  background-color: #f5f5f5;
+  background-color: white;
 }
 
 @media (min-width: 768px) {
   #particles-js {
-    min-height: 500px;
+    min-height: 600px;
   }
 }
